--- a/views/index.html
+++ b/views/index.html
@@ -1,32 +1,64 @@
 <!DOCTYPE html>
 
 <html>
-   <head>
-      <title>Timestamp Microservice | freeCodeCamp.org</title>
-      <link rel="shortcut icon" href="https://cdn.freecodecamp.org/universal/favicons/favicon-32x32.png" type="image/x-icon"/>
-      <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" type="text/css">
-      <link href="style.css" rel="stylesheet" type="text/css">
-   </head>
+  <head>
+    <title>Timestamp Microservice</title>
+    <link
+      rel="shortcut icon"
+      href="https://cdn.freecodecamp.org/universal/favicons/favicon-32x32.png"
+      type="image/x-icon"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link href="/css/style.css" rel="stylesheet" type="text/css" />
+  </head>
 
-   <body>
-    <h1>Timestamp Microservice</h1>
-    <hr />
-    <div class="container">
-      <h3>Example Usage:</h3>
-      <ul>
-        <li><a href="api/2015-12-25">[project url]/api/2015-12-25</a></li>
-        <li><a href="api/1451001600000">[project url]/api/1451001600000</a></li>
-      </ul>
+  <body>
+    <main>
+      <h1>Microsserviço de Timestamp</h1>
+      <div class="container">
+        <h3>Exemplo de uso</h3>
+        <ul>
+          <li><a href="api/2015-12-25">timestamp/api/2015-12-25</a></li>
+          <li><a href="api/1451001600000">timestamp/api/1451001600000</a></li>
+        </ul>
 
-      <h3>Example Output:</h3>
-      <p>
-        <code>{"unix":1451001600000, "utc":"Fri, 25 Dec 2015 00:00:00 GMT"}</code>
-      </p>
-    </div>
-    <div class="footer">
-      <p>
-        By <a href="https://www.freecodecamp.org/">freeCodeCamp.org</a>
-      </p>
-    </div>
+        <h3>Example Output:</h3>
+        <p>
+          <code
+            >{"unix":1451001600000, "utc":"Fri, 25 Dec 2015 00:00:00 GMT"}</code
+          >
+        </p>
+        <div class="text-div">
+          <h3>O que é Timestamp?</h3>
+          <p>
+            O Timestamp Unix é uma forma de compreender o tempo como uma
+            contagem contínua de segundos. Essa contagem começa no Unix Epoch em
+            1º de janeiro de 1970 no horário UTC. Portanto, o Timestamp Unix é
+            simplesmente o número de segundos entre uma data específica e o Unix
+            Epoch. Também deve ser mencionado (graças aos comentários dos
+            visitantes deste site) que esse ponto no tempo tecnicamente não
+            muda, não importa onde você esteja localizado no mundo. Isso é muito
+            útil para sistemas de computador acompanharem e classificarem
+            informações datadas em aplicações dinâmicas e distribuídas, tanto
+            online quanto no lado do cliente.
+          </p>
+        </div>
+      </div>
+    </main>
+    <footer>
+      <a href="https://github.com/rafa-ra" target="_blank">
+        <img src="images/github-sign.png" />
+      </a>
+      <a href="https://linkedin.com/in/rafaelreisaraujo" target="_blank">
+        <img src="images/linkedin.png" />
+      </a>
+      <a href="https://wa.me/+5531991457040" target="_blank">
+        <img src="images/whatsapp.png" />
+      </a>
+    </footer>
   </body>
 </html>
