--- a/views/index.html
+++ b/views/index.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
       type="text/css"
     />
-    <link href="public/css/style.css" rel="stylesheet" type="text/css" />
+    <link href="/css/style.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body>
